--- a/documentation/components/CardsImgTextNdivComponent.html
+++ b/documentation/components/CardsImgTextNdivComponent.html
@@ -61,7 +61,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts</code>
+    <code>src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts</code>
 </p>
 
 
@@ -91,7 +91,7 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>ngx-utilitario-img-text-ndiv</code></td>
+                <td class="col-md-9"><code>ngx-utilitario-cards-img-text-ndiv</code></td>
             </tr>
 
             <tr>
@@ -208,7 +208,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:18</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -233,7 +233,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:14</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -253,7 +253,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:15</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:15</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -279,7 +279,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:17</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -299,7 +299,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:11</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -319,7 +319,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:12</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -339,7 +339,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:16</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -359,7 +359,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:13</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -380,7 +380,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:10</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -404,7 +404,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:18</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -440,7 +440,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="24"
-                            class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:24</a></div>
+                            class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:24</a></div>
                 </td>
             </tr>
 
@@ -506,7 +506,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="22"
-                            class="link-to-prism">src/app/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:22</a></div>
+                            class="link-to-prism">src/app/cards/cards-img-text-ndiv/cards-img-text-ndiv.component.ts:22</a></div>
                 </td>
             </tr>
 
@@ -531,7 +531,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter } from &#x27;@angular/core&#x27;;
 
 @Component({
-  selector: &#x27;ngx-utilitario-img-text-ndiv&#x27;,
+  selector: &#x27;ngx-utilitario-cards-img-text-ndiv&#x27;,
   templateUrl: &#x27;./cards-img-text-ndiv.component.html&#x27;,
   styleUrls: [&#x27;./cards-img-text-ndiv.component.css&#x27;]
 })
@@ -560,21 +560,21 @@ export class CardsImgTextNdivComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;cards row row-no-padding&quot; [style.color]&#x3D;&quot;color&quot; (click)&#x3D;&quot;clickCard($event)&quot;&gt;
-    &lt;div class&#x3D;&quot;col-2 float-left&quot;&gt;
-        &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}}  [style.height]&#x3D;&quot;height&quot;/&gt;
-    &lt;/div&gt;
-    &lt;div class&#x3D;&quot;col-{{10 - contenido.length }} float-left&quot;&gt;
-        &lt;div [ngClass]&#x3D;&quot;classTexto&quot;&gt;
-            &lt;h2 class&#x3D;&quot;cardsTitulo&quot; [style.color]&#x3D;&quot;color&quot;&gt;{{titulo}}&lt;/h2&gt;
-            &lt;h3 class&#x3D;&quot;cardsDescripcion&quot;&gt;{{descripcion}}&lt;/h3&gt;
-            &lt;h3 class&#x3D;&quot;cardsEtiqueta&quot; [style.background]&#x3D;&quot;color&quot;&gt;{{etiqueta}}&lt;/h3&gt;
-            &lt;h3 class&#x3D;&quot;cardsContenido&quot;&gt;&lt;ng-content&gt;&lt;/ng-content&gt;&lt;/h3&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;div *ngFor&#x3D;&quot;let item of contenido&quot; class&#x3D;&quot;col-1 float-left center-middle&quot; [style.line-height]&#x3D;&quot;height&quot;&gt;
-        &lt;ng-content *ngIf&#x3D;&quot;item&#x3D;&#x3D;&#x3D;&#x27;content&#x27;&quot;&gt;&lt;/ng-content&gt;
-        &lt;span *ngIf&#x3D;&quot;item!&#x3D;&#x3D;&#x27;content&#x27;&quot;&gt;{{item}}&lt;/span&gt;
-    &lt;/div&gt;
+  &lt;div class&#x3D;&quot;col-2 float-left&quot;&gt;
+      &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}} alt&#x3D;&quot;imagen de card cambiar a dinamico&quot; [style.height]&#x3D;&quot;height&quot;/&gt;
+  &lt;/div&gt;
+  &lt;div class&#x3D;&quot;col-{{10 - contenido.length }} float-left&quot;&gt;
+      &lt;div [ngClass]&#x3D;&quot;classTexto&quot;&gt;
+          &lt;h2 class&#x3D;&quot;cardsTitulo&quot; [style.color]&#x3D;&quot;color&quot;&gt;{{titulo}}&lt;/h2&gt;
+          &lt;h3 class&#x3D;&quot;cardsDescripcion&quot;&gt;{{descripcion}}&lt;/h3&gt;
+          &lt;h3 class&#x3D;&quot;cardsEtiqueta&quot; [style.background]&#x3D;&quot;color&quot;&gt;{{etiqueta}}&lt;/h3&gt;
+          &lt;h3 class&#x3D;&quot;cardsContenido&quot;&gt;&lt;ng-content&gt;&lt;/ng-content&gt;&lt;/h3&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div *ngFor&#x3D;&quot;let item of contenido&quot; class&#x3D;&quot;col-1 float-left center-middle&quot; [style.line-height]&#x3D;&quot;height&quot;&gt;
+      &lt;ng-content *ngIf&#x3D;&quot;item&#x3D;&#x3D;&#x3D;&#x27;content&#x27;&quot;&gt;&lt;/ng-content&gt;
+      &lt;span *ngIf&#x3D;&quot;item!&#x3D;&#x3D;&#x27;content&#x27;&quot;&gt;{{item}}&lt;/span&gt;
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
     </div>
 
@@ -591,7 +591,7 @@ export class CardsImgTextNdivComponent implements OnInit {
     display: table !important;
     -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); */
     -moz-transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
     transition: 0.5s ease;
@@ -685,8 +685,8 @@ export class CardsImgTextNdivComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="cards row row-no-padding" [style.color]="color" (click)="clickCard($event)">    <div class="col-2 float-left">        <img class="cardsImagen" src={{imagen}}  [style.height]="height"/>    </div>    <div class="col-{{10 - contenido.length }} float-left">        <div [ngClass]="classTexto">            <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>            <h3 class="cardsDescripcion">{{descripcion}}</h3>            <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>            <h3 class="cardsContenido"><ng-content></ng-content></h3>        </div>    </div>    <div *ngFor="let item of contenido" class="col-1 float-left center-middle" [style.line-height]="height">        <ng-content *ngIf="item===\'content\'"></ng-content>        <span *ngIf="item!==\'content\'">{{item}}</span>    </div></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><div class="cards row row-no-padding" [style.color]="color" (click)="clickCard($event)">  <div class="col-2 float-left">      <img class="cardsImagen" src={{imagen}} alt="imagen de card cambiar a dinamico" [style.height]="height"/>  </div>  <div class="col-{{10 - contenido.length }} float-left">      <div [ngClass]="classTexto">          <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>          <h3 class="cardsDescripcion">{{descripcion}}</h3>          <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>          <h3 class="cardsContenido"><ng-content></ng-content></h3>      </div>  </div>  <div *ngFor="let item of contenido" class="col-1 float-left center-middle" [style.line-height]="height">      <ng-content *ngIf="item===\'content\'"></ng-content>      <span *ngIf="item!==\'content\'">{{item}}</span>  </div></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-cards-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'CardsImgTextNdivComponent'};
 </script>
