--- a/documentation/components/CardsComponent.html
+++ b/documentation/components/CardsComponent.html
@@ -61,9 +61,16 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/cards/cards.component.ts</code>
+    <code>src/app/cards/cards/cards.component.ts</code>
 </p>
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Card con titulo, subtitulo e icono</p>
+
+    </p>
 
 
     <p class="comment">
@@ -133,9 +140,6 @@
                             <li>
                                 <a href="#clickCard">clickCard</a>
                             </li>
-                            <li>
-                                <a href="#ngOnInit">ngOnInit</a>
-                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -191,24 +195,6 @@
     </table>
 </section>
 
-    <section>
-    <h3 id="constructor">Constructor</h3>
-        <table class="table table-sm table-bordered">
-            <tbody>
-                <tr>
-                    <td class="col-md-4">
-<code>constructor()</code>
-                    </td>
-                </tr>
-                        <tr>
-                            <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/cards/cards.component.ts:23</a></div>
-                            </td>
-                        </tr>
-
-            </tbody>
-        </table>
-</section>
 
     <section>
     <h3 id="inputs">Inputs</h3>
@@ -227,7 +213,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/cards/cards.component.ts:21</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/app/cards/cards/cards.component.ts:31</a></div>
                             </td>
                         </tr>
                 <tr>
@@ -253,7 +239,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/cards/cards.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="27" class="link-to-prism">src/app/cards/cards/cards.component.ts:27</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -273,9 +259,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/cards/cards.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/app/cards/cards/cards.component.ts:35</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Color del icono a mostrar</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -293,12 +285,12 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/cards/cards.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/cards/cards/cards.component.ts:23</a></div>
                             </td>
                         </tr>
                 <tr>
                     <td class="col-md-4">
-                        <div class="io-description"><p>recibe el icono a usar</p>
+                        <div class="io-description"><p>Icono a mostrar en el card</p>
 </div>
                     </td>
                 </tr>
@@ -320,9 +312,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/cards/cards.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/cards/cards/cards.component.ts:19</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Subtitulo a mostrar en el card</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <table class="table table-sm table-bordered">
@@ -341,9 +339,15 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/cards/cards.component.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/cards/cards/cards.component.ts:15</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Titulo a mostrar en el card</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -359,15 +363,21 @@
                 </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://angular.io/api/core/EventEmitter" target="_blank" >EventEmitter</a></code>
+                        <i>Type : </i>    <code>EventEmitter&lt;any&gt;</code>
 
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/cards/cards.component.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/app/cards/cards/cards.component.ts:39</a></div>
                             </td>
                         </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <div class="io-description"><p>Enviar accion de click en el card</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -400,14 +410,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="29"
-                            class="link-to-prism">src/app/cards/cards.component.ts:29</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="54"
+                            class="link-to-prism">src/app/cards/cards/cards.component.ts:54</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Envia un evento si hace click en el card</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -416,6 +428,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -427,6 +440,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>Caracteristicas del evento click en el card</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -444,54 +461,16 @@
             </tr>
         </tbody>
     </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="ngOnInit"></a>
-                    <span class="name">
-                        <b>
-                            ngOnInit
-                        </b>
-                        <a href="#ngOnInit"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>ngOnInit()</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="26"
-                            class="link-to-prism">src/app/cards/cards.component.ts:26</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
 </section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Input, Component, SimpleChanges, OnInit, OnChanges, SimpleChange, Output } from &#x27;@angular/core&#x27;;
-import { EventEmitter } from &#x27;events&#x27;;
-
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter } from &#x27;@angular/core&#x27;;
+/**
+ * Card con titulo, subtitulo e icono
+ */
 @Component({
   selector: &#x27;ngx-utilitario-cards&#x27;,
   templateUrl: &#x27;./cards.component.html&#x27;,
@@ -499,24 +478,48 @@ import { EventEmitter } from &#x27;events&#x27;;
 })
 export class CardsComponent implements OnInit {
 
+  /**
+   * Titulo a mostrar en el card
+   */
   @Input() titulo: string;
+  /**
+   * Subtitulo a mostrar en el card
+   */
   @Input() subtitulo: string;
   /**
-   * recibe el icono a usar
+   * Icono a mostrar en el card
    */
-  @Input() icono &#x3D; &#x27;fa fa-user&#x27;;
+  @Input() icono &#x3D; &#x27;fa fa-user&#x27;
+  /**
+   * Clase a aplicar al texto
+   */;
   @Input() classTexto &#x3D; &#x27;w-80 float-left&#x27;;
   /**
    * Enviar el tamaño de columnas y el tamaño del icono
    */
   @Input() classIcono &#x3D; &#x27;w-20 fontSize2-5&#x27;;
+  /**
+   * Color del icono a mostrar
+   */
   @Input() color &#x3D; &#x27;#000&#x27;;
-  @Output() click: EventEmitter &#x3D; new EventEmitter();
+  /**
+   * Enviar accion de click en el card
+   */
+  @Output() click: EventEmitter&lt;any&gt; &#x3D; new EventEmitter();
+  /**
+   * @ignore
+   */
   constructor() { }
-
+  /**
+   * @ignore
+   */
   ngOnInit() {
   }
 
+  /**
+   * Envia un evento si hace click en el card
+   * @param $event Caracteristicas del evento click en el card
+   */
   clickCard($event) {
     this.click.emit($event);
   }
@@ -533,7 +536,7 @@ export class CardsComponent implements OnInit {
     &lt;/div&gt;
 
     &lt;div [ngClass]&#x3D;&quot;classIcono&quot;&gt;
-        &lt;i class&#x3D;&quot;{{icono}} float-right cardIcono&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/i&gt;
+        &lt;em class&#x3D;&quot;{{icono}} float-right cardIcono&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/em&gt;
     &lt;/div&gt;
 &lt;/div&gt;</code></pre>
     </div>
@@ -618,8 +621,8 @@ export class CardsComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="cards" (click)="clickCard($event)">    <div [ngClass]="classTexto">        <h2 class="cardsTitulo">{{titulo}}</h2>        <h3 class="cardsSubtitulo">{{subtitulo}}</h3>        <h3 class="cardsContenido"><ng-content></ng-content></h3>    </div>    <div [ngClass]="classIcono">        <i class="{{icono}} float-right cardIcono" [style.color]="color"></i>    </div></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><div class="cards" (click)="clickCard($event)">    <div [ngClass]="classTexto">        <h2 class="cardsTitulo">{{titulo}}</h2>        <h3 class="cardsSubtitulo">{{subtitulo}}</h3>        <h3 class="cardsContenido"><ng-content></ng-content></h3>    </div>    <div [ngClass]="classIcono">        <em class="{{icono}} float-right cardIcono" [style.color]="color"></em>    </div></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-cards-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'CardsComponent'};
 </script>
