--- a/documentation/components/CardsImgTextComponent.html
+++ b/documentation/components/CardsImgTextComponent.html
@@ -61,7 +61,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/cards-img-text/cards-img-text.component.ts</code>
+    <code>src/app/cards/cards-img-text/cards-img-text.component.ts</code>
 </p>
 
 
@@ -211,7 +211,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:25</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:25</a></div>
                             </td>
                         </tr>
 
@@ -236,7 +236,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:22</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:22</a></div>
                             </td>
                         </tr>
                 <tr>
@@ -262,7 +262,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:18</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:18</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -282,7 +282,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:23</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="23" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:23</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -302,7 +302,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:11</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:11</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -322,7 +322,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:12</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:12</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -342,7 +342,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:24</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:24</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -362,7 +362,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:17</a></div>
                             </td>
                         </tr>
                 <tr>
@@ -388,7 +388,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:13</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:13</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -409,7 +409,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:10</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:10</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -433,7 +433,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-2" colspan="2">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:25</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:25</a></div>
                             </td>
                         </tr>
             </tbody>
@@ -469,7 +469,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:31</a></div>
+                            class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:31</a></div>
                 </td>
             </tr>
 
@@ -535,7 +535,7 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="29"
-                            class="link-to-prism">src/app/cards-img-text/cards-img-text.component.ts:29</a></div>
+                            class="link-to-prism">src/app/cards/cards-img-text/cards-img-text.component.ts:29</a></div>
                 </td>
             </tr>
 
@@ -557,7 +557,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, EventEmitter, Output } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter } from &#x27;@angular/core&#x27;;
 
 @Component({
   selector: &#x27;ngx-utilitario-cards-img-text&#x27;,
@@ -596,20 +596,20 @@ export class CardsImgTextComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;row cards row-no-padding&quot; [style.color]&#x3D;&quot;color&quot; (click)&#x3D;&quot;clickCard($event)&quot;&gt;
-    &lt;div class&#x3D;&quot;col-2 float-left&quot;&gt;
-        &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}} [style.height]&#x3D;&quot;height&quot; /&gt;
-    &lt;/div&gt;
-    &lt;div class&#x3D;&quot;col-9&quot;&gt;
-        &lt;div [ngClass]&#x3D;&quot;classTexto&quot;&gt;
-            &lt;h2 class&#x3D;&quot;cardsTitulo&quot; [style.color]&#x3D;&quot;color&quot;&gt;{{titulo}}&lt;/h2&gt;
-            &lt;h3 class&#x3D;&quot;cardsDescripcion&quot;&gt;{{descripcion}}&lt;/h3&gt;
-            &lt;h3 class&#x3D;&quot;cardsEtiqueta&quot; [style.background]&#x3D;&quot;color&quot;&gt;{{etiqueta}}&lt;/h3&gt;
-            &lt;h3 class&#x3D;&quot;cardsContenido&quot;&gt;&lt;ng-content&gt;&lt;/ng-content&gt;&lt;/h3&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;div [ngClass]&#x3D;&quot;classIcono&quot;&gt;
-        &lt;i class&#x3D;&quot;{{icono}} float-right cardIcono&quot;&gt;&lt;/i&gt;
-    &lt;/div&gt;
+  &lt;div class&#x3D;&quot;col-2 float-left&quot;&gt;
+      &lt;img class&#x3D;&quot;cardsImagen&quot; src&#x3D;{{imagen}} alt&#x3D;&quot;imagen de card cambiar a dinamico&quot; [style.height]&#x3D;&quot;height&quot; /&gt;
+  &lt;/div&gt;
+  &lt;div class&#x3D;&quot;col-9&quot;&gt;
+      &lt;div [ngClass]&#x3D;&quot;classTexto&quot;&gt;
+          &lt;h2 class&#x3D;&quot;cardsTitulo&quot; [style.color]&#x3D;&quot;color&quot;&gt;{{titulo}}&lt;/h2&gt;
+          &lt;h3 class&#x3D;&quot;cardsDescripcion&quot;&gt;{{descripcion}}&lt;/h3&gt;
+          &lt;h3 class&#x3D;&quot;cardsEtiqueta&quot; [style.background]&#x3D;&quot;color&quot;&gt;{{etiqueta}}&lt;/h3&gt;
+          &lt;h3 class&#x3D;&quot;cardsContenido&quot;&gt;&lt;ng-content&gt;&lt;/ng-content&gt;&lt;/h3&gt;
+      &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div [ngClass]&#x3D;&quot;classIcono&quot;&gt;
+      &lt;em class&#x3D;&quot;{{icono}} float-right cardIcono&quot;&gt;&lt;/em&gt;
+  &lt;/div&gt;
 &lt;/div&gt;</code></pre>
     </div>
 
@@ -626,7 +626,7 @@ export class CardsImgTextComponent implements OnInit {
     display: table !important;
     -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); */
     -moz-transition: 0.5s ease;
     -webkit-transition: 0.5s ease;
     transition: 0.5s ease;
@@ -719,8 +719,8 @@ export class CardsImgTextComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="row cards row-no-padding" [style.color]="color" (click)="clickCard($event)">    <div class="col-2 float-left">        <img class="cardsImagen" src={{imagen}} [style.height]="height" />    </div>    <div class="col-9">        <div [ngClass]="classTexto">            <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>            <h3 class="cardsDescripcion">{{descripcion}}</h3>            <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>            <h3 class="cardsContenido"><ng-content></ng-content></h3>        </div>    </div>    <div [ngClass]="classIcono">        <i class="{{icono}} float-right cardIcono"></i>    </div></div></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><div class="row cards row-no-padding" [style.color]="color" (click)="clickCard($event)">  <div class="col-2 float-left">      <img class="cardsImagen" src={{imagen}} alt="imagen de card cambiar a dinamico" [style.height]="height" />  </div>  <div class="col-9">      <div [ngClass]="classTexto">          <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>          <h3 class="cardsDescripcion">{{descripcion}}</h3>          <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>          <h3 class="cardsContenido"><ng-content></ng-content></h3>      </div>  </div>  <div [ngClass]="classIcono">      <em class="{{icono}} float-right cardIcono"></em>  </div></div></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-cards-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'CardsImgTextComponent'};
 </script>
