--- a/documentation/components/RepeatIconComponent.html
+++ b/documentation/components/RepeatIconComponent.html
@@ -369,8 +369,8 @@ export class RepeatIconComponent implements OnInit {
 
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;ng-container class&#x3D;&quot;repetirIcono&quot;&gt;
-    &lt;i *ngFor&#x3D;&quot;let item of activo | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;colorActivo&quot;&gt;&lt;/i&gt;
-    &lt;i *ngFor&#x3D;&quot;let item of (repetir - activo) | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/i&gt;
+    &lt;em *ngFor&#x3D;&quot;let item of activo | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;colorActivo&quot;&gt;&lt;/em&gt;
+    &lt;em *ngFor&#x3D;&quot;let item of (repetir - activo) | numberToArray&quot; class&#x3D;&quot;{{icono}}&quot; [style.color]&#x3D;&quot;color&quot;&gt;&lt;/em&gt;
 &lt;/ng-container&gt;</code></pre>
     </div>
 
@@ -408,8 +408,8 @@ export class RepeatIconComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><ng-container class="repetirIcono">    <i *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></i>    <i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></i></ng-container></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'clt-root'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'rclt-input'},{'name': 'MenuDotComponent', 'selector': 'rclt-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
+        var COMPONENT_TEMPLATE = '<div><ng-container class="repetirIcono">    <em *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></em>    <em *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></em></ng-container></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'ngx-utilitario-app'},{'name': 'CardsComponent', 'selector': 'ngx-utilitario-cards'},{'name': 'CardsImgTextComponent', 'selector': 'ngx-utilitario-cards-img-text'},{'name': 'CardsImgTextNdivComponent', 'selector': 'ngx-utilitario-cards-img-text-ndiv'},{'name': 'ChatBusquedaComponent', 'selector': 'ngx-utilitario-chat-busqueda'},{'name': 'ChatComponent', 'selector': 'ngx-utilitario-chat'},{'name': 'ChatConversacionComponent', 'selector': 'ngx-utilitario-chat-conversacion'},{'name': 'ChatDetalleAgregarComponent', 'selector': 'ngx-utilitario-chat-detalle-agregar'},{'name': 'ChatDetalleComponent', 'selector': 'ngx-utilitario-chat-detalle'},{'name': 'ChatListaComponent', 'selector': 'ngx-utilitario-chat-lista'},{'name': 'InputComponent', 'selector': 'ngx-utilitario-input'},{'name': 'MenuDotComponent', 'selector': 'ngx-utilitario-menu-dot'},{'name': 'ModalComponent', 'selector': 'rclt-modal'},{'name': 'RepeatIconComponent', 'selector': 'rclt-repeat-icon'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'RepeatIconComponent'};
 </script>
