reorganizacion de la libreria con documentacion, test y calidad de codigo

--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row ngx-utilitario-detalle-agregar">
     <div class="col-11">
-      <form [formGroup]="mensajeForm">
-        <input class="col-12" formControlName="mensaje" [attr.disabled]="disabled ? '' : null"
+      <form [formGroup]="messageForm">
+        <input class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
           [placeholder]="placeholder">
       </form>
     </div>
@@ -10,7 +10,7 @@
       <div class="ngx-utilitario-btns-acciones">
         <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray"><i class="fa fa-camera"
             aria-hidden="true"></i></button>
-        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="enviarMensaje()"><i class="fa fa-paper-plane"
+        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="sendMessage()"><i class="fa fa-paper-plane"
             aria-hidden="true"></i></button>
       </div>
     </div>
