testiando chat detail add

--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -2,7 +2,7 @@
   <div class="row ngx-utilitario-detalle-agregar">
     <div class="col-11">
       <form [formGroup]="messageForm">
-        <input class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
+        <input id="txt_message" class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
           [placeholder]="placeholder">
       </form>
     </div>
