--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
   <p>Se usa bootsrap y fontawesome para estilo e iconos</p>
   <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p>
 </div>
+<!-- <ngx-utilitario-chat-detail-add [disabled]="0"></ngx-utilitario-chat-detail-add> -->
