--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -8,8 +8,8 @@
     <ngx-utilitario-chat-list [list]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-list>
   </div>
   <div class="col-8">
-    <ngx-utilitario-chat-conversacion [conversacion]="conversacion" (nuevoMensaje)="enviarMensaje($event)"
+    <!-- <ngx-utilitario-chat-conversacion [conversacion]="conversacion" (nuevoMensaje)="enviarMensaje($event)"
       (eliminarMensajes)="eliminarMensajes()" (bloquearConversacion)="bloquearChat($event)">
-    </ngx-utilitario-chat-conversacion>
+    </ngx-utilitario-chat-conversacion> -->
   </div>
 </div>
