--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row ngx-utilitario-detalle-agregar">
+  <div class="row ngx-util-detail-add">
     <div class="col-11">
       <form [formGroup]="messageForm">
         <input id="txt_message" class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
@@ -7,11 +7,12 @@
       </form>
     </div>
     <div class="col-1">
-      <div class="ngx-utilitario-btns-acciones">
-        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray"><i class="fa fa-camera"
-            aria-hidden="true"></i></button>
-        <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="sendMessage()"><i class="fa fa-paper-plane"
-            aria-hidden="true"></i></button>
+      <div class="ngx-util-btns-acciones">
+        <input class="ngx-util-input-file" type="file" accept="image/*" #file (change)="sendImage($event)">
+        <button id="btn_sendImage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="file.click()"><i
+            class="fa fa-camera" aria-hidden="true"></i></button>
+        <button id="btn_sendMessage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray"
+          (click)="sendMessage()"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
