--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.scss
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.scss
@@ -3,12 +3,14 @@
     padding-right: 0 !important;
 }
 
-.ngx-utilitario-detalle-agregar{
+.ngx-util-detail-add{
     padding: 0.95rem;
     background: #fff;
 }
 
-.ngx-utilitario-detalle-agregar input{
+
+
+.ngx-util-detail-add input{
     background: #f5f5f6;
     border-radius: 4.5rem;
     box-shadow: none;
